--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,16 @@
 @import "tailwindcss";
+@plugin "daisyui";
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 
+h1, h2, h3,h4,h5,h6 {
+  font-family: var(--font-raleway);
+  
+}
+body, p, a, span {
+  font-family: var(--font-rajdhani);
+  
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,7 +31,7 @@
 }
 
 body {
-  background: var(--background);
+  
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  
 }
