--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,27 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @plugin "daisyui";
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
 
-h1, h2, h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--font-raleway);
-  
 }
-body, p, a, span {
+body,
+p,
+a,
+span {
   font-family: var(--font-rajdhani);
-  
 }
 
-
-.zIndex_sticky{
+.zIndex_sticky {
   z-index: 1000px;
 }
 
-
+.btn:where(input:checked:not(.filter .btn)) {
+  --btn-color: #d6a74e !important;
+}
