--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,5 +75,28 @@ span {
 }
 
 
+dialog {
+  position: fixed;   /* stays in place */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  margin: 0;
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.5); /* smooth dark overlay */
+}
+
+
+.fade-out {
+  opacity: 0;
+  transform: scale(0.95);
+  transition: all 0.3s ease;
+}
+
 
 
